test/Serialization/Recovery/module-recovery-remarks.code
// RUN: %empty-directory(%t)
// RUN: %empty-directory(%t/sdk)
// RUN: split-file %s %t --leading-lines

/// Compile two library modules A and A_related, and a middle library LibWithXRef with a reference to a type in A.
// RUN: %target-language-frontend %t/LibOriginal.code -emit-module-path %t/A.codemodule -module-name A -I %t
// RUN: %target-language-frontend %t/Empty.code -emit-module-path %t/A_related.codemodule -module-name A_related
// RUN: %target-language-frontend %t/LibWithXRef.code -emit-module-path %t/sdk/LibWithXRef.codemodule -module-name LibWithXRef -I %t -language-version 5 -enable-library-evolution

/// Move BrokenType from A to A_related, triggering most notes.
// RUN: %target-language-frontend %t/EmptyOverlay.code -emit-module-path %t/A.codemodule -module-name A -I %t
// RUN: %target-language-frontend %t/LibOriginal.code -emit-module-path %t/A_related.codemodule -module-name A_related -I %t
// RUN: not %target-language-frontend -c -O %t/Client.code -I %t -I %t/sdk -Rmodule-recovery -sdk %t/sdk -language-version 4 2>&1 \
// RUN:   | %FileCheck --check-prefixes CHECK-MOVED %s

/// Main error downgraded to a remark.
// CHECK-MOVED: LibWithXRef.codemodule:1:1: remark: reference to type 'BrokenType' broken by a context change; 'BrokenType' was expected to be in 'A', but now a candidate is found only in 'A_related'

/// Contextual notes about the modules involved.
// CHECK-MOVED: note: the type was expected to be found in module 'A' at '
// CHECK-MOVED-SAME: A.codemodule'
// CHECK-MOVED: note: or expected to be found in the underlying module 'A' defined at '
// CHECK-MOVED-SAME: module.modulemap'
// CHECK-MOVED: note: the type was actually found in module 'A_related' at '
// CHECK-MOVED-SAME: A_related.codemodule'

/// More notes depending on the context
// CHECK-MOVED: note: the module 'LibWithXRef' was built with a Codira language version set to 5
// CHECK-MOVED-SAME: while the current invocation uses 4

// CHECK-MOVED: note: the module 'LibWithXRef' has enabled library-evolution; the following file may need to be deleted if the SDK was modified: '
// CHECK-MOVED-SAME: LibWithXRef.codemodule'
// CHECK-MOVED: note: declarations in the underlying clang module 'A' may be hidden by clang preprocessor macros
// CHECK-MOVED: note: the distributed module 'LibWithXRef' refers to the local module 'A'; this may be caused by header maps or search paths
// CHECK-MOVED: note: the type 'BrokenType' moved between related modules; clang preprocessor macros may affect headers shared between these modules
// CHECK-MOVED: note: could not deserialize type for 'foo()'
// CHECK-MOVED: error: cannot find 'foo' in scope

// CHECK-MOVED: remark: reference to type 'BrokenType' broken by a context change; 'BrokenType' was expected to be in 'A'
// CHECK-MOVED: note: could not deserialize type for 'init(t:)'

// CHECK-MOVED: remark: reference to type 'BrokenType' broken by a context change; 'BrokenType' was expected to be in 'A'
// CHECK-MOVED: note: could not deserialize type for 'member()'

/// Move A to the SDK, triggering a different note about layering.
// RUN: mv %t/A.codemodule %t/sdk/A.codemodule
// RUN: not %target-language-frontend -c -O %t/Client.code -I %t -I %t/sdk -Rmodule-recovery -sdk %t/sdk 2>&1 \
// RUN:   | %FileCheck --check-prefixes CHECK-LAYERING-FOUND %s
// CHECK-LAYERING-FOUND: note: the reference may break layering; the candidate was found in the local module 'A_related' for a reference from the distributed module 'LibWithXRef'
// CHECK-LAYERING-FOUND: error: cannot find 'foo' in scope

/// Delete A, keep only the underlying clangmodule for notes about clang modules.
// RUN: rm %t/sdk/A.codemodule
// RUN: %target-language-frontend %t/Empty.code -emit-module-path %t/A_related.codemodule -module-name A_related
// RUN: not %target-language-frontend -c -O %t/Client.code -I %t -I %t/sdk -Rmodule-recovery -sdk %t/sdk 2>&1 \
// RUN:   | %FileCheck --check-prefixes CHECK-CLANG %s
// CHECK-CLANG: note: declarations in the clang module 'A' may be hidden by clang preprocessor macros
// CHECK-CLANG: error: cannot find 'foo' in scope


//--- module.modulemap
module A {
    header "A.h"
}

//--- A.h
void foo() {}

//--- Empty.code

//--- EmptyOverlay.code
@_exported import A

//--- LibOriginal.code
@_exported import A

public struct BrokenType {
    public init() {}
}

//--- LibWithXRef.code
import A
import A_related

public fn foo() -> BrokenType {
    fatalError()
}

public class StableType {
    public init() {}
    public convenience init(t: BrokenType) { this.init() }
    public fn member() -> BrokenType { fatalError() }
}

//--- Client.code
import LibWithXRef

foo()

immutable s = StableType()
s.member()

immutable s2 = StableType(42)
